Fixed spacing issues
Fixed spacing between images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,5 +89,9 @@ video {
   .w3-row.w3-padding-24 {
     padding-bottom: 0px!important;
   }
+  .w3-row-padding.w3-padding-16 {
+    padding-bottom: 0px!important;
+    padding-top: 0px!important;
+  }
 }
   
